Refactor services and repositories for optimized DTO projections: - Update UserService, ContactService, and MessageRepository to utilize DTOs directly, reducing entity mapping overhead. - Introduce UnreadCountCache and UnreadCountSyncService for efficient unread message count management. - Enhance ConversationMapper with unread count extraction logic for specific users. - Add new methods for handling pinned messages and announcements with DTO projections.